Clean up on ChangePass and ServiceDispatchImpl
Removed unused thread functions from ChangePass.  Added a few function comments and removed duplicate code in ServiceDispatchImpl.